--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
     <title>KnowledgeVault</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <img src="assets/logo-navbar.png" alt="logo">
+
+            <ul>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">How It Works</a></li>
+                <li><a href="#">Why It's Different</a></li>
+            </ul>
+
+            <button class="btn">Get Early Access</button>
+        </nav>
+    </header>
     
 </body>
 </html>
