--- a/index.html
+++ b/index.html
@@ -26,6 +26,29 @@
 
             <button class="btn">Get Early Access</button>
         </nav>
+
+        <section id="banner">
+            <div id="earlyAccess">
+                <img src="assets/early-access.png" alt="">
+                <h4>Early Access Now Open</h4>
+            </div>
+
+            <br>
+
+            <h1>Structured Thinking,</h1>
+            <h1 style="color: rgba(70, 145, 101, 1);">Not Just Note-Taking.</h1>
+            <br>
+            <p>A private space to store notes, links, and learning summaries — designed to help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+            <br>
+<div id="bannerBtn">
+                <button class="btn">
+                    Start Building Your Vault <img src="assets/ArrowRight.png" alt="">
+                </button>
+                <button class="btn2">
+                    <img src="assets/Play.png" alt=""> See How It Works
+                </button>
+</div>
+        </section>
     </header>
     
 </body>
