--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,15 @@
     <link rel="stylesheet" href="styles.css">
     <!-- font linked -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-<!-- favicon linked -->
- <link rel="shortcut icon" href="assets/logo-navbar.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+    <!-- favicon linked -->
+    <link rel="shortcut icon" href="assets/logo-navbar.png" type="image/x-icon">
     <title>KnowledgeVault</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -38,18 +42,64 @@
             <h1>Structured Thinking,</h1>
             <h1 style="color: rgba(70, 145, 101, 1);">Not Just Note-Taking.</h1>
             <br>
-            <p>A private space to store notes, links, and learning summaries — designed to help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+            <p>A private space to store notes, links, and learning summaries — designed to help you think clearly,
+                connect ideas, and turn learning into long-term knowledge.</p>
             <br>
-<div id="bannerBtn">
+            <div id="bannerBtn">
                 <button class="btn">
                     Start Building Your Vault <img src="assets/ArrowRight.png" alt="">
                 </button>
                 <button class="btn2">
                     <img src="assets/Play.png" alt=""> See How It Works
                 </button>
-</div>
+            </div>
         </section>
     </header>
-    
+
+    <main>
+        <section id="notes">
+            <h1>Notes don't fail, Structure does.</h1>
+            <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+
+            <div id="noteBoxes">
+                <div class="noteBox">
+                    <img src="assets/Vector.png" alt="">
+                    <br>
+                    <br>
+                    <h2>Scattered notes</h2>
+                    <br>
+                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+                <div class="noteBox">
+                    <img src="assets/Bookmarks.png" alt="">
+                    <br>
+                    <br>
+                    <h2>Bookmark overload</h2>
+                    <br>
+                    <p>Hundreds of saved links you'll never revisit or remember.</p>
+                </div>
+                <div class="noteBox">
+                    <img src="assets/Brain.png" alt="">
+                    <br>
+                    <br>
+                    <h2>No idea connections</h2>
+                    <br>
+                    <p>Insights stay isolated, never building into bigger understanding.</p>
+                </div>
+                <div class="noteBox">
+                    <img src="assets/Info.png" alt="">
+                    <br>
+                    <br>
+                    <h2>Forgetting what
+                        you learned</h2>
+                    <br>
+                    <p>Knowledge fades because there's no system to retain it..</p>
+                </div>
+
+            </div>
+        </section>
+    </main>
+
 </body>
+
 </html>
