--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <br>
                     <h2>Scattered notes</h2>
                     <br>
-                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                    <p class="secondaryLine">Your ideas live in 10 different apps, none of them connected.</p>
                 </div>
                 <div class="noteBox">
                     <img src="assets/Bookmarks.png" alt="">
@@ -76,7 +76,7 @@
                     <br>
                     <h2>Bookmark overload</h2>
                     <br>
-                    <p>Hundreds of saved links you'll never revisit or remember.</p>
+                    <p class="secondaryLine">Hundreds of saved links you'll never revisit or remember.</p>
                 </div>
                 <div class="noteBox">
                     <img src="assets/Brain.png" alt="">
@@ -84,18 +84,44 @@
                     <br>
                     <h2>No idea connections</h2>
                     <br>
-                    <p>Insights stay isolated, never building into bigger understanding.</p>
+                    <p class="secondaryLine">Insights stay isolated, never building into bigger understanding.</p>
                 </div>
                 <div class="noteBox">
                     <img src="assets/Info.png" alt="">
                     <br>
                     <br>
-                    <h2>Forgetting what
-                        you learned</h2>
+                    <h2>Forgetting what you learned</h2>
                     <br>
-                    <p>Knowledge fades because there's no system to retain it..</p>
+                    <p class="secondaryLine">Knowledge fades because there's no system to retain it..</p>
                 </div>
 
+            </div>
+        </section>
+
+        <section id="brain">
+            <img src="assets/knowledge.png" alt="">
+
+            <div id="brainContent">
+                <h4>The Solution</h4>
+                <br>
+                <br>
+                <h1>Your second brain,<br>structured by design.</h1>
+                <br>
+                <br>
+                <p class="secondaryLine">Personal Knowledge Vault isn't another note-taking app. It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+                <br><br><br>
+                <p class="checkList">
+                    <img src="assets/CheckCircle.png" alt=""> Capture ideas with structure built-in from day one
+                </p>
+                <p class="checkList">
+                    <img src="assets/CheckCircle.png" alt=""> Connect related concepts automatically as you write
+                </p>
+                <p class="checkList">
+                    <img src="assets/CheckCircle.png" alt=""> Build lasting knowledge through reflection prompts
+                </p>
+                <p class="checkList">
+                    <img src="assets/CheckCircle.png" alt=""> Find anything instantly with semantic search
+                </p>
             </div>
         </section>
     </main>
