thinkMore section complete

--- a/index.html
+++ b/index.html
@@ -124,6 +124,21 @@
                 </p>
             </div>
         </section>
+
+        <section id="thinkMore">
+            <h1>Ready to think more clearly?</h1>
+            <br>
+            <p class="secondaryLine" id="thinkMoreText">
+                Join thousands of learners who are building their personal knowledge vaults. Start free, no credit card required.
+            </p>
+            <br>
+            <button class="btn">
+                Get Early Access
+                    <img src="assets/ArrowRight.png" alt="">
+                </button>
+                <br>
+                <p class="secondaryLine">Free during early access • No credit card needed</p>
+        </section>
     </main>
 
 </body>
