--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
+        <!-- icon -->
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- favicon linked -->
     <link rel="shortcut icon" href="assets/logo-navbar.png" type="image/x-icon">
     <title>KnowledgeVault</title>
@@ -140,6 +142,23 @@
                 <p class="secondaryLine">Free during early access • No credit card needed</p>
         </section>
     </main>
+
+    <footer>
+        <div id="firstFooter">
+            <img src="assets/logo-footer.png" alt="">
+            <div>
+                <h3>Social Links</h3>
+                <div id="socialLinks">
+                    <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
+                    <i class="fa-brands fa-square-x-twitter" style="color: #ffffff;"></i>
+                    <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
+
+                </div>
+            </div>
+        </div>
+        <hr>
+        <p class="secondaryLine" id="copyRight">© 2026 Personal Knowledge Vault. All rights reserved.</p>
+    </footer>
 
 </body>
 
